search: Fix a couple layout issues with advanced search dialog

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -2162,7 +2162,7 @@ td.indented {
 }
 .accordian dt a {
   color: black;
-  font-weight: bold;
+  font-weight: 500;
   display: block;
 }
 .accordian dt.active a {
